--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ name = "ads111xbin"
 path = "src/main.rs"
 
 [dependencies]
-i2cdev = "0.3.1"
+i2cdev =  { path = "../rust-i2cdev", version = "0.3.1" }
 byteorder = "1.1.0"
 
 
